name:                cswk2
version:             1.0.0.0
-- synopsis:
-- description:
homepage:            http://www2.warwick.ac.uk/fac/sci/dcs/teaching/modules/cs141/
author:              Michael B. Gale
maintainer:          m.gale@warwick.ac.uk
copyright:           2018 Michael B. Gale
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

library
  hs-source-dirs:      src
  exposed-modules:
    Language,
    Interpreter
  default-language:    Haskell2010
  build-depends:
    base >= 4.7 && < 5,
    mtl >= 2.2 && < 2.3,
    transformers >= 0.5 && < 0.6,
    containers >= 0.5 && < 0.6

executable scratch-clone
  hs-source-dirs:      exe
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:
    base >= 4.7 && < 5,
    mtl >= 2.2,
    transformers >= 0.5,
    http-media >= 0.6,
    wai-app-static >= 3.1,
    warp >= 3.2,
    servant >= 0.11,
    servant-server >= 0.11,
    text >= 1.2,
    bytestring >= 0.10,
    aeson >= 1.1,
    xml-conduit >= 1.5,
    html-conduit,
    containers,
    cswk2
  other-modules:
    Convert

test-suite cswk2-test
  type:             exitcode-stdio-1.0
  hs-source-dirs:   test
  main-is:          Spec.hs
  build-depends:
    base, cswk2, hspec, random, QuickCheck
  ghc-options:      -threaded -rtsopts -with-rtsopts=-N
  default-language: Haskell2010

benchmark cswk2-bench
  type:             exitcode-stdio-1.0
  hs-source-dirs:   bench
  main-is:          Main.hs
  build-depends:
    base, cswk2, criterion, deepseq
  default-language: Haskell2010

source-repository head
  type:     git
  location: https://github.com/cs256/cswk2
